--- a/yourboyoi.html
+++ b/yourboyoi.html
@@ -13,10 +13,10 @@
 
 <body>
     <div class="container text-center">
-    <dib class="row">
+    <div class="row">
     <div class="col-lg-6">
         <img src="img.jpg" alt="YOURBOYOI photo">
-        <h1>YOURBOYOI</h1>
+        <h2>YOURBOYOI</h2>
         <p>Hello, my name is Pavel, I am a beginner programmer, I am also interested in fashion, music, tattoos, technology and what is happening in the world, at the link below you will find my blog in Teltgram</p>
         <button>Subscribe to my Telegarm channel</button>
     </div>
