created the menu and logo

--- a/yourboyoi.html
+++ b/yourboyoi.html
@@ -9,16 +9,56 @@
           rel="stylesheet"
           integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
           crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
+    <style>
+          .rounded-img {
+            width: 60%;
+            border-radius: 50%;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
+            padding: 0.5em;
+            margin-bottom: 1em;
+          }
+    </style>
 </head>
 
 <body>
-    <div class="container text-center">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+          <a class="navbar-brand p-0" href="/">
+            <img src="YB.png" alt="Logo YOURBOYOI" width="40">
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Favorite places</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+
+    <div class="container text-center my-5">
     <div class="row">
-    <div class="col-lg-6">
-        <img src="img.jpg" alt="YOURBOYOI photo">
-        <h2>YOURBOYOI</h2>
-        <p>Hello, my name is Pavel, I am a beginner programmer, I am also interested in fashion, music, tattoos, technology and what is happening in the world, at the link below you will find my blog in Teltgram</p>
-        <button>Subscribe to my Telegarm channel</button>
+    <div class="col-lg-6 col-md-8 mx-auto">
+        <img class="rounded-img" src="img2.jpg" alt="YOURBOYOI photo">
+        <h1 class="fw-light">YOURBOYOI</h1>
+        <p class="lead text-muted">Hello, my name is Pavel, I am a beginner programmer, I am also interested in fashion, music, tattoos, technology and what is happening in the world, at the link below you will find my blog in Teltgram and Instagram</p>
+        <a href="https://t.me/boyoiru"
+        target="_blank"
+        class="btn btn-primary">
+            Subscribe to my Telegarm channel
+        </a>
+        <a href="https://vk.com/phvoinov"
+        target="_blank"
+        class="btn btn-secondary">
+            Subscribe to my page VK
+        </a>
     </div>
     </div>
     </div>
