--- a/yourboyoi.html
+++ b/yourboyoi.html
@@ -24,7 +24,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-          <a class="navbar-brand p-0" href="/">
+          <a class="navbar-brand p-0" href="yourboyoi.html">
             <img src="YB.png" alt="Logo YOURBOYOI" width="40">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,10 +33,10 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="yourboyoi.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Favorite places</a>
+                <a class="nav-link" href="places.html">Favorite places</a>
               </li>
             </ul>
           </div>
