--- a/places.html
+++ b/places.html
@@ -11,7 +11,19 @@
           crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
     <style>
-          
+       .card {
+        border-radius: 1em;
+        text-align: center;
+       }   
+       .card:hover {
+        background-color: rgb(0, 0, 0, 0.1);
+       }
+       .card img {
+        border-radius: 50%;
+        width: 80%;
+        margin: auto;
+        padding: 1em;
+       }
     </style>
 </head>
 
