--- a/yourboyoi.html
+++ b/yourboyoi.html
@@ -48,7 +48,7 @@
     <div class="col-lg-6 col-md-8 mx-auto">
         <img class="rounded-img" src="img2.jpg" alt="YOURBOYOI photo">
         <h1 class="fw-light">YOURBOYOI</h1>
-        <p class="lead text-muted">Hello, my name is Pavel, I am a beginner programmer, I am also interested in fashion, music, tattoos, technology and what is happening in the world, at the link below you will find my blog in Teltgram and Instagram</p>
+        <p class="lead text-muted">Hello, my name is Pavel, I am a beginner programmer, I am also interested in fashion, music, tattoos, technology and what is happening in the world, at the link below you will find my blog in Teltgram and VK</p>
         <a href="https://t.me/boyoiru"
         target="_blank"
         class="btn btn-primary">
