--- a/yourboyoi.html
+++ b/yourboyoi.html
@@ -19,6 +19,8 @@
             margin-bottom: 1em;
           }
     </style>
+    <link type="image/x-icon" href="favicon-32x32.png" rel="shortcut icon">
+    <link type="image/x-icon" href="favicon-32x32.png" rel="icon">
 </head>
 
 <body>
