--- a/places.html
+++ b/places.html
@@ -10,6 +10,8 @@
           integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
           crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
+    <link type="image/x-icon" href="favicon-32x32.png" rel="shortcut icon">
+    <link type="image/x-icon" href="favicon-32x32.png" rel="icon">
     <style>
        .card {
         border-radius: 1em;
