--- a/places.html
+++ b/places.html
@@ -16,6 +16,7 @@
        .card {
         border-radius: 1em;
         text-align: center;
+        height: 470px;
        }   
        .card:hover {
         background-color: rgb(0, 0, 0, 0.1);
@@ -50,37 +51,43 @@
           </div>
         </div>
       </nav>
+      <style>
+        .card-text {
+          height: 70px;
+        }
+      </style>
       <div class="container text-center my-5">
       <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-5">
       <div class="col">
         <div class="card">
-          <img src="img2.jpg" class="card-img-top" alt="...">
+          <img src="photo_2022-10-01_00-50-47.jpg" class="card-img-top" alt="Photo My Tattoos">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <h5 class="card-title">My Tattoos</h5>
+            <p class="card-text">All my tattoos</p>
+            <a href="#" class="btn btn-primary">Look</a>
           </div>
         </div>
       </div>
 
       <div class="col">
         <div class="card">
-          <img src="img2.jpg" class="card-img-top" alt="...">
+          <img src="photo_2022-10-01_00-54-14.jpg" class="card-img-top" alt="My Music Playlist">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <h5 class="card-title">My Playlist</h5>
+            <p class="card-text">My music playlist on iTunes. Favorite songs and artists</p>
+            <a href="#" class="btn btn-primary">Look</a>
           </div>
         </div>
       </div>
 
       <div class="col">
         <div class="card">
-          <img src="img2.jpg" class="card-img-top" alt="...">
+          <img src="photo_2022-10-01_00-59-43.jpg" class="card-img-top" alt="Cities Vibe">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <h5 class="card-title">Cities I want to visit</h5>
+            <p class="card-text">Countries and cities that I want to visit in the future. Cities that you like with their vibe</p>
+            <a href="#" class="btn btn-primary">Look</a>
+          
           </div>
         </div>
       </div>
