--- a/yourboyoi.html
+++ b/yourboyoi.html
@@ -17,6 +17,7 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
             padding: 0.5em;
             margin-bottom: 1em;
+            height: 320px;
           }
     </style>
     <link type="image/x-icon" href="favicon-32x32.png" rel="shortcut icon">
