--- a/yourboyoi.html
+++ b/yourboyoi.html
@@ -19,6 +19,21 @@
             margin-bottom: 1em;
             height: 320px;
           }
+          .footer {
+        padding: 5px;
+        background-color: rgb(0, 0, 0, 0.1);
+        margin-top: auto;
+        text-align: center;
+        padding-top: 5px;
+      }
+      .footer a {
+        color: black;
+        font-size: 10px;
+        margin-left: 20px;
+      }
+      .footer nav a:hover {
+        border-bottom: 1px solid rgb(252, 252, 252);
+      }
     </style>
     <link type="image/x-icon" href="favicon-32x32.png" rel="shortcut icon">
     <link type="image/x-icon" href="favicon-32x32.png" rel="icon">
@@ -65,5 +80,13 @@
     </div>
     </div>
     </div>
+    <footer class="footer">
+      <div class="social">
+        <a href="https://www.twitch.tv/yourboy_oi"><img src="imgonline-com-ua-Resize-BsB4FFyP7QR.png" alt="TWITCH"></a>
+        <a href="https://vk.com/phvoinov"><img src="imgonline-com-ua-Resize-r3ZFraOY9wfYaljL.png" alt="VK"></a>
+        <a href="https://t.me/boyoiru"><img src="imgonline-com-ua-Resize-jww6zKipqFM52h.png" alt="TELEGRAM"></a>
+        <a href="https://youtube.com/channel/UCKrQxWymbKXec6T-NTj2eaA"><img src="imgonline-com-ua-Resize-EssFGGGgeR.png" alt="YOUTUBE"></a>
+       </div>
+    </footer>
 </body>
 </html>
